--- a/index.html
+++ b/index.html
@@ -6,8 +6,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/9adcb13310.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    dcssds
+    <div class="sidebar">
+        <div class="logo">
+            <i class="fa-solid fa-mountain"><span>Dashboard</span></i>
+
+        </div>
+        <div class="element"><i class="fa-sharp fa-solid fa-house"> Home</i></div>
+        <div class="element"><i class="fa-solid fa-user"> Profile</i></div>
+        <div class="element"><i class="fa-solid fa-message"> Messages</i></div>
+        <div class="element"><i class="fa-sharp fa-solid fa-clock-rotate-left"> History</i></div>
+        <div class="element"><i class="fa-solid fa-list-check"> Tasks</i></div>
+        <div class="element"><i class="fa-solid fa-people-group" style="padding-bottom: 40px;"> Communities</i></div>
+        <div class="element"><i class="fa-solid fa-gears"> Settings</i></div>
+        <div class="element"><i class="fa-solid fa-headset"> Support</i></div>
+        <div class="element"><i class="fa-solid fa-key"> Privacy</i></div>
+    </div>
+    <div class="header">
+        <div class="search">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input type="text" width="500"></input>
+        </div>
+        <div class="profile">
+            <i class="fa-solid fa-bell"></i>
+            <div class="fotodiv"><div class="foto"></div></div>
+            <div style="font-size: 20px; font-weight: bold">Bear Grylls</div>
+
+        </div>
+        <div class="welcome">
+            <div class="fotodivbig"><div class="fotobig"></div></div>
+            <div><div style="font-size: 18px; font-weight: bold;">Hi there,</div><div style="font-size: 30px; font-weight: bold">Bear!</div></div>
+
+        </div>
+        <div class="buttons">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+
+        </div>
+
+    </div>
+    <div class="main">
+        <div class="head">Your Challenges</div>
+        <div class="projects">
+            <div class="project"><strong>Axe Throwing</strong><br/>30 minute Shooting adventure.
+                Focus on the target, keep your cool and pull the trigger.
+                FREE Assault Course entry
+                Suitable for guests aged 10+
+                Guests aged 10-15 must be accompanied on theewfwfwefwfwef activity by a participating parent or guardian aged 18+ on a ratio of 1 adult to 2 children. That parent or guardian must purchase a full ticket for the activity.</div>
+            <div class="project"><strong>Climb</strong><br/>60 minute Climb adventure.
+                Get harnessed up for an indoor climbing experience like no other.
+                FREE Assault Course entry.
+                Suitable for guests aged 8+.
+                Guests aged 8 or 9 must be accompanied on the activity by a participating adult. This adult must have a full activity ticket.</div>
+            <div class="project"><strong>iFLY</strong><br/>60 minute Cage Snorkel adventure
+                Travel beneath the waves for an unforgettable Snorkel adventure.
+                FREE Assault Course entry.
+                Suitable for guests aged 8+.
+                Guests aged 8 or 9 must be accompanied on the activity by a participating adult. This adult must have a full activity ticket.</div>
+            <div class="project"><strong>High Ropes</strong><br/>60 minute High Ropes adventure.
+                The High Ropes is an outdoor activity and will open in most weathers. We will only close High Ropes in extreme high winds or thunder.
+                FREE Assault Course entry.
+                Suitable for guests aged 8+.
+                Guests aged 8 or 9 must be accompanied on the activity by a participating adult. This adult must have a full activity ticket.</div>
+            <div class="project"><strong>Shooting</strong><br/>30 minute Shooting adventure.
+                Focus on the target, keep your cool and pull the trigger.
+                FREE Assault Course entry.
+                Suitable for guests aged 10+.
+                Guests aged 10-15 must be accompanied on the activity by a participating parent or guardian aged 18+ on a ratio of 1 adult to 2 children. That parent or guardian must purchase a full ticket for the activity.</div>
+            <div class="project"><strong>Shark Dive</strong><br/>120 minute Shark Dive adventure.
+                Be ready to experience the incredible as you take the plunge with our aquatic creatures.
+                Please review the Dive Medical Form before booking.
+                FREE Assault Course entry.
+                Suitable for guests aged 10+.</div>
+
+        </div>
+    </div>
+    <div class="announcments">
+        <div class="head">Announcments</div>
+        <div class="anouncdiv"><strong> Big News</strong><br/>
+            Bear Grylls is the simply the best.</div>
+
+    </div>
+    <div class="trending">
+        <div class="head">Trending</div>
+        <div class="trend"><strong> User of the Month</strong><br/>
+            <div class="usermonth">
+                <div class="fotobig"></div>
+                <div style="font-size: 20px; font-weight: bold">Bear Grylls</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
